# cppcraft

./: CMakeLists.txt  conanfile.py
src/: CMakeLists.txt  macro.hpp  main.cpp
src/shaders/: CMakeLists.txt  MainFrag.glslf  MainVert.glslv
src/subsystems/: App.cpp  App.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Events.cpp  Events.hpp  GlApi.cpp  GlApi.hpp  InputEvents.cpp  InputEvents.hpp  Window.cpp  Window.hpp
src/subsystems/graphics/: Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
